--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "string-template-plus"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Gaurav Atreya"]
 description = "Render string template with more options"
@@ -8,6 +8,8 @@ description = "Render string template with more options"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
+chrono = "0.4.31"
 lazy_static = "1.4.0"
 regex = "1.9.5"
 subprocess = "0.2.9"
