--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "string-template-plus"
-version = "0.2.3"
+version = "0.3.0"
 edition = "2021"
 authors = ["Gaurav Atreya"]
 description = "Render string template with more options"
@@ -15,6 +15,7 @@ categories = ["template-engine", "text-processing"]
 [dependencies]
 anyhow = "1.0.75"
 chrono = "0.4.31"
+colored = "2.0.4"
 lazy_static = "1.4.0"
 regex = "1.9.5"
 subprocess = "0.2.9"
