--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ chrono = "0.4.31"
 colored = "2.0.4"
 lazy_static = "1.4.0"
 regex = "1.9.5"
+rust_lisp = { version = "0.18.0", features = ["libm"] }
 subprocess = "0.2.9"
 titlecase = "2.2.1"
 
