Add PKGBUILD and better name for the binary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,5 @@ name = "string_template_plus"
 path = "src/lib.rs"
 
 [[bin]]
-name = "string-template-plus-visualize"
-path = "src/bin/visual-test.rs"
+name = "stp-visualize"
+path = "src/bin/stp-visualize.rs"
